--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.1",
+    "husky": "^8.0.3",
     "postcss": "^8.4.21",
     "prettier": "2.8.3",
     "tailwindcss": "^3.2.4",
