--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.11",
     "@next/font": "13.1.2",
     "next": "13.1.2",
     "react": "18.2.0",
