--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.11",
+    "@heroicons/react": "^2.0.16",
     "@next/font": "13.1.2",
     "next": "13.1.2",
     "react": "18.2.0",
